make small adjustments to CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,7 +87,9 @@ set(CPACK_PACKAGE_DESCRIPTION_SUMMARY
     "The Spherical-Cube Quad-Tree Unique Index Library (LibSQUID)")
 set(CPACK_PACKAGE_CONTACT "Jim Wren; jwren@lanl.gov")
 set(CPACK_PACKAGE_VENDOR ${CPACK_PACKAGE_CONTACT})
-set(CPACK_RPM_PACKAGE_RELEASE "${LIBSQUID_RELEASE_STRING}")
+if (NOT LIBSQUID_RELEASE_STRING STREQUAL "")
+   set(CPACK_RPM_PACKAGE_RELEASE "${LIBSQUID_RELEASE_STRING}")
+endif()
 set(CPACK_GENERATOR "RPM" "DEB")
 set(CPACK_SOURCE_GENERATOR "TGZ")
 set(CPACK_SOURCE_IGNORE_FILES "~$;[.]bak$/;[.]swp$;[.]svn$")
